@@ -1,4 +1,6 @@
 Version 0.2.0 [2005/04/12]
+	* Font and color configuration
+	* A lot of code shuffle
 	* Added environment variables expansion
 	* Change email to gmail
 	* Added "jt" alias
